# cs5340-uncertainty-modelling

./: .flake8  .gitignore  .pylintrc  2D ResNet18 + LSTM.py  README.md  Rei_BNN.ipynb  build-opencv.sh  install-opencv.sh  linear-bayesian-last-layer.ipynb  ms_asl.ipynb  pyproject.toml  rei_bnn.ipynb  test.py  train.py  train_i3d_bnn.ipynb  train_keypoint.py
model/: I3D.py  I3D_bayesian.py  KeyPointsNet.py  ResNet3D.py  RetNet18_GRU.py  cnn_lstm.py  gru.py
utils/: data_loader.py  dataset.py  download.py  metadata.py  optical_flow.py  preprocess.py
