[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Shivansh Bakshi <work@shivanshbakshi.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"
yt-dlp = "^2025.2.19"
torch = "^2.6.0"
opencv-python = "^4.11.0.86"
av = "^14.2.0"


[tool.poetry.group.dev.dependencies]
cblack = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
